--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -130,6 +130,11 @@
             android:windowSoftInputMode="adjustResize" />
 
         <activity
+            android:name="com.omegawallet.app.ui.SwapActivity"
+            android:label="@string/title_activity_swap"
+            android:windowSoftInputMode="adjustResize" />
+
+        <activity
             android:name=".ui.AddTokenActivity"
             android:label="@string/title_add_token" />
 
